Closed
Bug 1088588
Opened 10 years ago
Closed 10 years ago
Build failure without GLX in X11TextureSourceOGL.cpp
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
RESOLVED
FIXED
mozilla37
People
(Reporter: dmueller, Assigned: dmueller)
Details
Attachments
(1 file)
794 bytes,
patch
|
nical
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/39.0.2171.36 Safari/537.36
Steps to reproduce:
build with --with-gl-provider=EGL
Actual results:
[17117s] BasicImageLayer.o
[17118s] /home/abuild/rpmbuild/BUILD/mozilla/gfx/layers/opengl/X11TextureSourceOGL.cpp:107:1: error: expected declaration before '}' token
[17118s] }
[17118s] ^
[17118s] /home/abuild/rpmbuild/BUILD/mozilla/config/rules.mk:991: recipe for target 'X11TextureSourceOGL.o' failed
[17118s] make[5]: *** [X11TextureSourceOGL.o] Error 1
Expected results:
build should continue. patch is:
--- a/mozilla/gfx/layers/opengl/X11TextureSourceOGL.cpp 2014-10-11 11:01:27.111256303 +0200
+++ b/mozilla/gfx/layers/opengl/X11TextureSourceOGL.cpp 2014-10-24 11:33:34.602641752 +0200
@@ -102,7 +102,8 @@
}
}
-#endif
-
}
}
+
+#endif
+
Issue reproduced on openSUSE: ARM
same patch applies (the namespace brackets open inside #ifdef GL_PROVIDER_GLX, but close after #endif
So when its not defined, tehre are 2 closing brackets but none opening.
Comment 2•10 years ago
|
||
Attachment #8513837 -
Flags: review?(nical.bugzilla)
Comment 3•10 years ago
|
||
Dirk, thanks for the patch. I've attached it and requested review (the patch has you as the cset author), so I'm going to mark this assigned to you as well; let me know if all that's OK.
Assignee: nobody → dmueller
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Updated•10 years ago
|
Attachment #8513837 -
Flags: review?(nical.bugzilla) → review+
Comment 4•10 years ago
|
||
Landed under my name with "Patch by Dirk Mueller" given the lack of response:
remote: https://hg.mozilla.org/integration/fx-team/rev/bd910b32e904
Comment 5•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
You need to log in
before you can comment on or make changes to this bug.
Description
•