Bug 1088588 - fix ifdef in X11TextureSourceOGL.cpp, patch by Dirk Mueller, r=nical